--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 import Header from '../components/Header.astro';
 import Experiencia from '../components/Experiencia.astro';
+import Proyectos from '../components/Proyectos.astro';
 ---
 
 <Layout title="Daniel Plasencia">
@@ -9,10 +10,11 @@ import Experiencia from '../components/Experiencia.astro';
 		<div class="items">
 
 		</div>
-		<div class="w-auto mt-10 mx-52">
+		<div class="w-auto mt-10 ml-[22%] mr-[22%]">
 			<div class="flex [80%] flex-col items-center justify-center">
 				<Header/>
 				<Experiencia/>
+				<Proyectos/>
 			</div>
 			
 		</div>
