--- a/src/components/Experiencia.astro
+++ b/src/components/Experiencia.astro
@@ -5,16 +5,22 @@ import ExperienceItem from "./Experienciaitem.astro"
 const EXPERIENCE = [
   {
     date: "Actualmente...",
-    title: "Creador de Contenido",
-    company: "Twitch",
+    title: "Principal Frontend Engineer",
+    company: "Horizonte Medic",
     description:
-      "Divulgo sobre programación y desarrollo web en diferentes plataformas. Galardonado como mejor creador de contenido de habla no-inglesa en 2022 y mejor comunidad en 2023 por GitHub.",
+      "Responsable del sistema web usado por la empresa para gestionar y administrar datos y registros medicos de sus pacientes. Sistema que se ha extendido para empresas de otros rubros con el fin de gestionar su personal y archivos medicos. Integración continua e implementacion en mas de 6 empresas diferentes.",
     link: "https://twitch.tv/midudev",
   },
   {
-    date: "Septiembre 2022",
+    date: "Junio 2023 - Enero 2024",
     title: "Principal Frontend Engineer",
-    company: "Adevinta Spain",
+    company: "Tigal Group",
+    description:
+      "Responsable de la plataforma, componentes y utilidades para la creación y desarrollo de aplicaciones web. Mejora de un 30% en la entrega de software. Implantación de medidas de integración continua y despliegue con A/B testing en más de 15 equipos.",
+  },{
+    date: "Junio 2023 - Enero 2024",
+    title: "Principal Frontend Engineer",
+    company: "Tigal Group",
     description:
       "Responsable de la plataforma, componentes y utilidades para la creación y desarrollo de aplicaciones web. Mejora de un 30% en la entrega de software. Implantación de medidas de integración continua y despliegue con A/B testing en más de 15 equipos.",
   },
