--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Header from '../components/Header.astro';
 import Experiencia from '../components/Experiencia.astro';
 import Proyectos from '../components/Proyectos.astro';
+import About from '../components/About.astro';
 ---
 
 <Layout title="Daniel Plasencia">
@@ -15,6 +16,7 @@ import Proyectos from '../components/Proyectos.astro';
 				<Header/>
 				<Experiencia/>
 				<Proyectos/>
+				<About/>
 			</div>
 			
 		</div>
