--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,8 +1,13 @@
 ---
 import { FontAwesomeIcon } from '@fortawesome/react-fontawesome';
+import './Header.css'
 ---
 
     <div class="mb-10">
+        <div class="absolute inset-0 bg-cover bg-repeat-x animate-slide opacity-60" 
+            style={{ backgroundImage: "url('img/pattern.png')" ,backgroundSize: "cover", zIndex: "-1",    
+             WebkitMaskImage: "linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0))", }}>
+        </div>
         <div class="flex flex-row items-center justify-center">
             <div class="imagen_yo m-5">
                 <img src="img/yo.jpg" alt="" class=" rounded-full w-[220px] h-[200px] object-cover">
