--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,11 +12,10 @@ import About from '../components/About.astro';
 
 		</div>
 		<div class="w-auto mt-10 ml-[22%] mr-[22%]">
-			<div class="flex [80%] flex-col items-center justify-center">
+			<div class="flex [80%] flex-col items-center justify-center pb-5">
 				<Header/>
 				<Experiencia/>
 				<Proyectos/>
-				<About/>
 			</div>
 			
 		</div>
