--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,12 +3,20 @@
 @tailwind utilities;
 
 @keyframes slide {
-  0% { background-position: 0 0; }
-  100% { background-position: -200% 0; } /* Ajusta el valor según el tamaño de la imagen */
+  0% {
+    background-position: 0 0;
+  }
+
+  100% {
+    background-position: -1200px 0;
+  }
+
+  /* Matches background-size width */
 }
 
 .animate-slide {
-  animation: slide 20s linear infinite;
-  background-size: cover;
+  animation: slide 60s linear infinite;
+  background-size: 1200px 100%;
+  /* Fixed width for consistent speed */
   background-repeat: repeat-x;
 }
