--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 interface Props {
 	title: string;
 }
+import "../pages/index.css";
 
 const { title } = Astro.props;
 ---
@@ -22,7 +23,6 @@ const { title } = Astro.props;
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
 		/>
-		<link rel="stylesheet" href="/src/pages/index.css" />
 		<title>{title}</title>
 	</head>
 	<body>
